--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body  aria-setsize="align">
     <div class="resume">
 
-     <img src="/zahid pic.jpg" alt="Candidate Photo" border="2" align="center" class="center-img" >
+     <img src="/photo.jpg" alt="Candidate Photo" border="2" align="center" class="center-img" >
    <div class="box"> <h2 class="text-border" style="text-align: center;">Basic information</h2> </div>
     <h4  style="text-align: center;">Name:<b>Zahid Eqbal Khan</b></h4>
     <h4  style="text-align: center;">Phone number:<i>8804634787</i></h4>
@@ -107,4 +107,5 @@
 
     
 </body>
+
 </html>
